--- a/indexpage.html
+++ b/indexpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
+		<title>Roshini Karnan</title>
 	</head>
 	<body>
 		<nav>
@@ -14,14 +14,16 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the heyyyyyyyyy cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+        		<h1>Hi there, I'm Roshini!</h1>
+				<p>I'm a student,an avid app developer and a budding web developer.I am currently doing my Undergraduation from <em>National Institue of Technology, Tiruchchirapalli</em>, one of the best engineering colleges in India.
+					
+					<a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+			<li><p>Feel free to ping me anytime! <a href="mailto:roshini2335@gmail.com">email</a></p></li>
+        		<li><a href="https://github.com/sleephackers">github.com/hankquinlan</a></li>
 			</ul>
 		</footer>
 	</body>
