--- a/indexpage.html
+++ b/indexpage.html
@@ -8,8 +8,7 @@
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+			<li><a href="/cv">Resume</a></li>
     		</ul>
 		</nav>
 		<div class="container">
@@ -22,8 +21,8 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-			<li><p>Feel free to ping me anytime! <a href="mailto:roshini2335@gmail.com">email</a></p></li>
-        		<li><a href="https://github.com/sleephackers">github.com/hankquinlan</a></li>
+			<li><p>Feel free to ping me anytime <a href="mailto:roshini2335@gmail.com"><u>here<u></a></p></li>
+        		<li><a href="https://github.com/sleephackers">github.com/sleephackers</a></li>
 			</ul>
 		</footer>
 	</body>
