--- a/indexpage.html
+++ b/indexpage.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Roshini Karnan</title>
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
 		<nav>
@@ -14,7 +15,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Roshini!</h1>
-				<p>I'm a student,an avid app developer and a budding web developer.I am currently doing my Undergraduation from <em>National Institue of Technology, Tiruchchirapalli</em>, one of the best engineering colleges in India.
+				<p>I'm a student,an avid app developer and a budding web developer.I am currently doing my undergraduation from <em>National Institute of Technology, Tiruchchirapalli</em>, one of the best engineering colleges in India.
 					
 					<a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
