--- a/indexpage.html
+++ b/indexpage.html
@@ -17,13 +17,13 @@
         		<h1>Hi there, I'm Roshini!</h1>
 				<p>I'm a student,an avid app developer and a budding web developer.I am currently doing my undergraduation from <em>National Institute of Technology, Tiruchchirapalli</em>, one of the best engineering colleges in India.
 					
-					<a href="/about">Read more about my life...</a></p>
+					<a href="/about">Wanna know more? Click <u> here</u></a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
 			<li><p>Feel free to ping me anytime <a href="mailto:roshini2335@gmail.com"><u>here<u></a></p></li>
-        		<li><a href="https://github.com/sleephackers">github.com/sleephackers</a></li>
+				<li><p>Check out my projects<a href="https://github.com/sleephackers"><u>here</u></a></li>
 			</ul>
 		</footer>
 	</body>
