--- a/indexpage.html
+++ b/indexpage.html
@@ -23,7 +23,8 @@
 		<footer>
     		<ul>
 			<li><p>Feel free to ping me anytime <a href="mailto:roshini2335@gmail.com"><u>here<u></a></p></li>
-				<li><p>Check out my projects<a href="https://github.com/sleephackers"><u>here</u></a></li>
+				<li><p>Check out my projects <a href="https://github.com/sleephackers"><u>here</u></a></li>
+				<li><p>Some really cool articles that i love :</li>
 			</ul>
 		</footer>
 	</body>
