--- a/indexpage.html
+++ b/indexpage.html
@@ -9,21 +9,22 @@
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
-			<li><a href="/cv">Resume</a></li>
+			<li><a href="/resume">Resume</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Roshini!</h1>
+			<h1>Hi there,<font color="#E91E63"> I'm Roshini!</font></h1>
 				<p>I'm a student,an avid app developer and a budding web developer.I am currently doing my undergraduation from <em>National Institute of Technology, Tiruchchirapalli</em>, one of the best engineering colleges in India.
 					
-					<a href="/about">Wanna know more? Click <u> here</u></a></p>
+					<a href="/about">Wanna know more? Click<font color="#E91E63"> <u> here</u></font></a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-			<li><p>Feel free to ping me anytime <a href="mailto:roshini2335@gmail.com"><u>here<u></a></p></li>
-				<li><p>Check out my projects <a href="https://github.com/sleephackers"><u>here</u></a></li>
+			<li><p>Feel free to <u>ping</u> me anytime<font color="#E91E63"><a href="mailto:roshini2335@gmail.com"></a></font> </p></li>
+				<li><a href="https://github.com/sleephackers">Check out my projects <u> here</u></a>
+				<li><a href="mailto:roshini2335@gmail.com">Teach me at <u>roshini2335@gmail.com</u></a>
 				<li><p>Some really cool articles that i love :</li>
 			</ul>
 		</footer>
