--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 		<footer>
     		<ul>
 			<li><p>Feel free to <u>ping</u> me anytime<font color="#E91E63"><a href="mailto:roshini2335@gmail.com"></a></font> </p></li>
-				<li><a href="https://github.com/sleephackers">Check out my projects <u> here</u></a>
-				<li><a href="mailto:roshini2335@gmail.com">Teach me at <u>roshini2335@gmail.com</u></a>
+				<li><a href="https://github.com/sleephackers"><font color="#E91E63">Check out my projects <u> here</u></font></a>
+				<li><a href="mailto:roshini2335@gmail.com">Reach me at <u>roshini2335@gmail.com</u></a>
 				<li><p>Some really cool articles that i love :</li>
 			</ul>
 		</footer>
