--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-				<li><a href="https://github.com/sleephackers">Check out my projects <font color="#E91E63"><u> here</u></font></a>
-				<li><a href="mailto:roshini2335@gmail.com">Reach me at <font color="#E91E63"><u>roshini2335@gmail.com</u></font></a>
-				<li><p>Some really cool articles that i love :</li>
-			</ul>
+				<li><font size="5"><a href="https://github.com/sleephackers">Check out my projects <font color="#E91E63"><u> here</u></font></font></a><br><br>
+				<li><font size="5"><a href="mailto:roshini2335@gmail.com">Reach me at <font color="#E91E63" size="4"><u>roshini2335@gmail.com</u></font></a>
+		</ul>
 		</footer>
 	</body>
 </html>
