--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 		<title>Roshini Karnan</title>
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
-	<body>
+	<bodystyle="background-image:url('clouds.jpg')">
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
+			<li><font color="#E91E63" size="3.5"><a href="/">Home</a></font></li>
 	        	<li><a href="/about">About</a></li>
 			<li><a href="/resume">Resume</a></li>
     		</ul>
