--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<title>Roshini Karnan</title>
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
+	<body>
+		
 		<nav>
     		<ul>
 			<li><font color="#E91E63" size="3.5"><a href="/">Home</a></font></li>
