--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<h1>Hi there,<font color="#E91E63"> I'm Roshini!</font></h1>
 				<p>I'm a student,an avid app developer and a budding web developer.I am currently doing my undergraduation from <em>National Institute of Technology, Tiruchchirapalli</em>, one of the best engineering colleges in India.
 					
-					<a href="/about">Wanna know more? Click<font color="#E91E63"> <u> here</u></font></a></p>
+					<a href="/about">Wanna know more? Go to my<font color="#E91E63"> <u> About</u></font></a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
