Basic Website Done

--- a/about.html
+++ b/about.html
@@ -2,23 +2,16 @@
 <html>
 	<head>
 		<title>Roshini Karnan</title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-			<li><font color="#E91E63" size="3.5"><a href="/about">About</a></font></li>
-			<li><a href="/resume">Resume</a></li>
-    		</ul>
-		</nav>
   <div class="container">
 	  
-	  <img src="ProfilePic.jpg" alt="Profile Pic" width="300" height="300">
+	 
 	  <h1>Hey there!</h1>
-	  <p>I am a Chirpy,young 18 year old girl and I am currently in my sophomore year in college.I am an App and Web developer and a self taught makeup artist and hairstylist too!
-		  In my free time i love to code,eat random stuff or binge watching F.R.I.E.N.D.S and a bunch of youtube videos!
-		  Oh and i am a bathroom singer too! (I mean, who isn't!).
+	  <p>I am a Chirpy,young 19 year old girl and I am currently in my sophomore year in college. I am an App and Web developer and a self taught makeup artist and hairstylist too!
+		  In my free time I love to code, eat random stuff or binge watching F.R.I.E.N.D.S and a bunch of youtube videos!
+		  Oh and I am a bathroom singer! (I mean, who isn't!).
 		  
 		  I was introduced to competitive coding and developing in school and since then i've been on this never ending amazing learning curve.
 		  I hope someday my contribution would help the society and I am constantly working towards acheiving that goal of mine.
