--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="stars"></div>
   <div class="twinkling">
     <div class="topnav">
-      <a class="active" href="#about">About</a>
+      <a class="active" href="#about">Home</a>
       <!-- <a href="projects.html">Projects</a> -->
       <!-- <a href="#skils">Skills</a> -->
       <!-- <a href="#contact">Resume</a> -->
